# RoseMusic

./: .gitignore  .gitmodules  README.md  Rosary-Music_1.0.0_amd64.deb  build.bat  cargo-sources.json  index.html  io.github.roseblume.rosemusic.metainfo.xml  io.github.roseblume.rosemusic.yaml  node-sources.json  note.yaml  package-lock.json  package.json  pnpm-lock.yaml  snapcraft.yaml  todo.md  vite.config.js  vite.config.js.timestamp-1730225028256-291b5f3f57458.mjs
.github/: depandabot.yml
.github/workflows/: arm.yml  flatpak.yml  main.yml  snapcraft.yml
pls/: .gitignore  main.py
public/covers/: 1.avif  10.avif  11.avif  12.avif  14.avif  15.avif  16.avif  17.avif  2.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif  default.avif
scripts/: build.bat  inst.bat  prep.bat  prep.sh
src/: App.css  App.jsx  Radio.jsx  funcs.js  i18n.js  index.jsx  save.jsx  signals.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/meta/: Cargo.toml  testFile.json
src-tauri/crates/meta/src/: lib.rs
src-tauri/crates/meta/tests/: metadata_tests.rs  test_metadata.rs
src-tauri/crates/meta/tests/output/: test_reading_metadata.json
src-tauri/crates/rand/: Cargo.toml
src-tauri/crates/rand/src/: lib.rs
src-tauri/crates/utils/: Cargo.toml
src-tauri/crates/utils/src/: lib.rs
src-tauri/crates/utils/src/collections/: collect.rs
src-tauri/crates/utils/tests/: music_files.rs
src-tauri/icons/: icon.icns
src-tauri/src/: filemanager.rs  lib.rs  logger.rs  main.rs  math.rs  player.rs  playlist.rs  radio.rs  scan.rs  scannnn.rs
src-tauri/src/scanner/: mobile.rs  mod.rs
src/Components/: ProgressBar.jsx  load.jsx  settings.jsx
src/Components/common/: funcs.js  signals.js
src/Components/common/Components/: back.jsx  load.jsx  menu.jsx
src/Components/features/local/: player.jsx
src/Components/features/local/lists/: artist.jsx  genre.jsx  tracks.jsx
src/Components/features/radio/: Radio.jsx  stations.js
src/Components/settings/: debug.jsx  extras.jsx  settings.jsx
src/components/: GenreList.jsx  MusicPlayer.jsx  RadioList.jsx
src/features/local/lists/: artist.jsx  genre.jsx  index.jsx  tracks.jsx
src/features/radio/: Radio.jsx  stations.js
src/i18n/: index.js
src/lib/: funcs.js
src/lib/signals/: index.js
src/pages/: Home.jsx  Splashscreen.jsx  index.jsx
src/settings/: debug.jsx  extras.jsx  index.js
src/styles/: App.css
src/ui/: GhostBar.jsx  back.jsx  index.js  load.jsx  menu.jsx  player.jsx
