[package]
name = "rosary-music"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rosary_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "compression"] }
serde = { version = "1", default-features = false }
serde_json = {version = "1", default-features = false}
lofty = {version = "0.22.2", default-features = false}
rodio = {version = "0.21.1", default-features = false, features = ["symphonia-flac", "symphonia-isomp4", "symphonia-aac", "symphonia-mp3", "symphonia-wav", "playback"] }
rand = { path="./crates/rand" } # This replaced the original rand
utils = { path="./crates/utils"}
# meta = { path="./crates/meta" }
num_cpus = {version = "1.17.0", default-features = false}
walkdir = {version = "2.5.0", default-features = false}
once_cell = {version = "1.21.3", default-features = false}

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = "fat" # Enables link-time-optimizations.
opt-level = 3
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
