[package]
name = "rosary-music"
version = "3.0.0"
description = "A Tauri App"
authors = ["James A. Rose"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rosary_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "compression", "native-tls"] }
serde = { version = "1", default-features = false }
serde_json = {version = "1", default-features = false}
rodio = {version = "0.21.1", default-features = false, features = ["symphonia-flac", "symphonia-isomp4", "symphonia-aac", "symphonia-mp3", "symphonia-wav", "playback"] }
once_cell = {version = "1.21.3", default-features = false}
utils = { path = "./crates/utils", default-features = false, features = ["rosary"] }
remeta = { version = "1.2.0", default-features = false, features = ["id3v1", "id3v2", "m4a", "wav", "flac"] }
# remeta = { path = "../../crates/remeta", default-features = false, features = ["id3v1", "id3v2", "m4a", "wav", "flac"] }
rand = { path= "./crates/rand", default-features = false, features = ["ints", "num-u32"] }


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = "fat" # Enables link-time-optimizations.
opt-level = 3
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
