[package]
name = "rand"
version = "0.1.0"
edition = "2024"

[lib]

[profile.dev]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = "fat" # Enables link-time-optimizations.
opt-level = 3
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = "fat" # Enables link-time-optimizations.
opt-level = 3
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.